--- a/emotes.yaml
+++ b/emotes.yaml
@@ -3,3 +3,4 @@ emote_translator:
   'henyatKettle': '<:henyaKettle:1108918704747577425>'
   'henyatHenyaheart': '<:HenyaHeart:1107237396036190270>'
   'henyatZoom': '<:henyaZoom:1107237413656481884>'
+  'henyatHenyaomegalul': '<:henyaOmegaLul:1106061439157932063>'
