--- a/emotes.yaml
+++ b/emotes.yaml
@@ -4,3 +4,4 @@ emote_translator:
   'henyatHenyaheart': '<:HenyaHeart:1107237396036190270>'
   'henyatZoom': '<:henyaZoom:1107237413656481884>'
   'henyatHenyaomegalul': '<:henyaOmegaLul:1106061439157932063>'
+  'henyatHenyacomfy': '<:HenyaComfy:1107237381700063303>'
