--- a/emotes.yaml
+++ b/emotes.yaml
@@ -1,7 +1,7 @@
 emote_translator:
-  'henyatDance': '<a:HenyaDance:1107237388587114567>'
-  'henyatKettle': '<:henyaKettle:1108918704747577425>'
-  'henyatHenyaheart': '<:HenyaHeart:1107237396036190270>'
-  'henyatZoom': '<:henyaZoom:1107237413656481884>'
-  'henyatHenyaomegalul': '<:henyaOmegaLul:1106061439157932063>'
-  'henyatHenyacomfy': '<:HenyaComfy:1107237381700063303>'
+  'henyDance': '<a:HenyaDance:1107237388587114567>'
+  'henyKettle': '<:henyaKettle:1108918704747577425>'
+  'henyHenyaheart': '<:HenyaHeart:1107237396036190270>'
+  'henyZoom': '<:henyaZoom:1107237413656481884>'
+  'henyHenyaomegalul': '<:henyaOmegaLul:1106061439157932063>'
+  'henyHenyacomfy': '<:HenyaComfy:1107237381700063303>'
